Nile testnet replaced with Shasta. Other small changes

--- a/recycling_machine/server/.env.example
+++ b/recycling_machine/server/.env.example
@@ -1,4 +1,4 @@
-TRONGRID_API_ENDPOINT='https://nile.trongrid.io'
-NILE_RECYCLING_MACHINE_ADDRESS=''
-NILE_PACKAGE_PRICES_ADDRESS=""
+TRONGRID_API_ENDPOINT='https://api.shasta.trongrid.io'
+RECYCLING_MACHINE_CONTRACT_ADDRESS=''
+PACKAGE_PRICES_CONTRACT_ADDRESS=""
 PRIVATE_KEY=''
